FuseTools/scripts/deploy_fusetools.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fusetools
  name: fusetools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusetools
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fusetools
    spec:
      containers:
      - image: makkernl/fusetools:latest
        name: fusetools
        resources: {}
status: {}
