FuseTools/scripts/svc_fusetools.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: fusetools
  name: fusetools
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fusetools
  type: ClusterIP
status:
  loadBalancer: {}
