FuseTools/scripts/route_fusetools.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: fusetools
  name: fusetools
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fusetools
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None    
status: {}
